Contact : Responsive + fixed error footer white space below

--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -6,7 +6,7 @@
     z-index: 555;
     margin: auto;
     width: 100%;
-    height: 75vh;
+    height: 80vh;
     background-color: rgb(66, 66, 66);
     /* Contact - Image*/
 
@@ -80,15 +80,62 @@
 }
 
 
-/* Contact Footer */
-.contact_footer{
-    margin-top: 60px;
-}
+
+
 
 /* MEDIA QUERIES */
+/* PC */
+@media(max-width:1020px) {
+    .contact_section {
+    
+            .contact_form {
+                width: 75%;
+                padding: 40px;
+            }
+        }
+}
+
 /* Tablette */
-@media(max-width:768px) {}
 
-/* PHONE */
+@media(max-width:768px) {
+    .contact_section {
+    
+            .contact_form {
+                width: 100%;
+            }
+        }
+}
 
-@media(max-width:530px) {}
+
+/* Phone */
+
+@media(max-width:560px) {
+    .contact_section {
+            .contact_form {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                .name, .email {
+                        width: 100%;
+                        display: initial;
+                        margin:0;
+                        input{
+                            margin-top: 10px;
+                        }
+                    }
+                .email{
+                    display: inline-block;
+                    margin-top: 20px;
+                }
+                .form-btn, .text{
+                    margin-top: 20px;
+                }
+                .text{
+                    textarea{
+                        height: 180px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+}
